--- a/rekenrace-roan/rekenrace-roan/views/QuizWindow.xaml
+++ b/rekenrace-roan/rekenrace-roan/views/QuizWindow.xaml
@@ -207,10 +207,11 @@
                            HorizontalAlignment="Center"
                            Foreground="#de1c7e"
                            FontWeight="Bold"
-                           Margin="10" />
+                           Margin="20" />
                 <TextBox x:Name="txtAnswer"
                          Width="200"
                          Height="40"
+                         Margin="0 0 0 50"
                          BorderBrush="#de1c7e"
                          BorderThickness="2"
                          FontSize="24"
